Improve tests